header and main

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Playlist</title>
 </head>
 <body>
+    <header class="header">
+        <img src="./assets/img/playlist_logo.svg" alt="Логотип плейлиста">
+    </header>
+    <main id="main">
+        <h1>My Playlists</h1>
+
+    </main>
 
     <script src="script.js"></script>
 </body>
