--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     </header>
     <main id="main">
         <h1>My Playlists</h1>
+        <div class="container">
+            
+        </div>
 
     </main>
 
